--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,14 @@ a:hover{
 .center{
       text-align: center;
 }
+.right{
+      text-align: right;
+}
+.form-control:focus{
+      outline: 0px !important;
+      box-shadow: none;
+      -webkit-appearance:none;
+}
 
 /* generic class for main container*/
 .pois{
@@ -29,7 +37,7 @@ a:hover{
 .pois-col{
       margin-bottom: 3vh;
 }
-.pois-invalid{
+.pois-invalid, .pois-invalid:focus{
       border: 1.5px solid #cc0000;
       box-shadow: 0px 10px 10px -15px #993030;
 }
@@ -63,3 +71,15 @@ button.navbar-toggler:focus{
       color: #993030;
 }
 /* transaction */
+
+/* flex */
+.pois-flex{
+      display: flex;
+}
+.pois-flex > div > h1{
+      margin-bottom: 0px;
+}
+.pois-flex > div > button{
+      border-radius: 3px;
+      width: 100%;
+}
