--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,10 @@ a:hover{
       margin-top: 5vh;
       margin-bottom: 5vh;
 }
+.pois-padding{
+      padding-top: 2vh;
+      padding-bottom: 2vh;
+}
 .pois-col{
       margin-bottom: 3vh;
 }
